--- a/package.json
+++ b/package.json
@@ -1,30 +1,51 @@
 {
-  "name": "vue-admin",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/node": "^18.11.10",
-    "axios": "^1.2.1",
-    "js-cookie": "^3.0.1",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.0.27",
-    "pinia-plugin-persistedstate": "^3.0.1",
-    "qs": "^6.11.0",
-    "vue": "^3.2.41",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.12.0",
-    "unplugin-vue-components": "^0.22.11",
-    "vite": "^3.2.3",
-    "vue-tsc": "^1.0.9"
-  }
+	"name": "vue-admin",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc && vite build",
+		"preview": "vite preview",
+		"lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
+		"prettier": "prettier --write ."
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"@babel/core": "^7.21.8",
+		"@babel/eslint-parser": "^7.21.8",
+		"@types/node": "^18.11.10",
+		"axios": "^1.4.0",
+		"eslint": "^8.0.1",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-vue": "^9.12.0",
+		"js-cookie": "^3.0.1",
+		"nprogress": "^0.2.0",
+		"pinia": "^2.0.27",
+		"pinia-plugin-persistedstate": "^3.0.1",
+		"prettier": "^2.8.8",
+		"qs": "^6.11.0",
+		"vite-plugin-eslint": "^1.8.1",
+		"vue": "^3.2.41",
+		"vue-router": "4"
+	},
+	"devDependencies": {
+		"@types/nprogress": "^0.2.0",
+		"@types/qs": "^6.9.7",
+		"@typescript-eslint/eslint-plugin": "^5.43.0",
+		"@typescript-eslint/parser": "^5.59.5",
+		"@vitejs/plugin-vue": "^4.2.1",
+		"eslint-config-standard-with-typescript": "^34.0.1",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"typescript": "*",
+		"unplugin-auto-import": "^0.12.0",
+		"unplugin-vue-components": "^0.22.11",
+		"vite": "^4.3.4",
+		"vue-tsc": "^1.2.0"
+	}
 }
